Applied IDE-recommended refactoring