@@ -6,6 +6,7 @@ import at.aau.serg.kingdombuilderserver.board.quadrants.QuadrantTower;
 import at.aau.serg.kingdombuilderserver.board.quadrants.QuadrantFields;
 import at.aau.serg.kingdombuilderserver.game.GameHousePosition;
 import at.aau.serg.kingdombuilderserver.game.Player;
+import lombok.Getter;
 
 import java.util.*;
 import java.util.function.Supplier;
@@ -13,6 +14,8 @@ import java.util.stream.Collectors;
 
 public class GameBoard {
     private static final int SIZE = 400; // 20x20
+    // Getter für das Feld-Array, etc.
+    @Getter
     private TerrainField[] fields = new TerrainField[SIZE];
 
     private final Random rand = new Random();
@@ -30,7 +33,7 @@ public class GameBoard {
         // 1. Vier verschiedene Quadranten zufällig wählen (ohne Wiederholung)
         List<Supplier<Quadrant>> pool = new ArrayList<>(QUADRANT_SUPPLIERS);
         Collections.shuffle(pool);
-        List<Quadrant> quadrants = pool.subList(0, 4).stream().map(Supplier::get).collect(Collectors.toList());
+        List<Quadrant> quadrants = pool.subList(0, 4).stream().map(Supplier::get).toList();
 
         // 2. Für jeden Quadranten eine Zufallsrotation wählen (0, 90, 180, 270 Grad)
         List<Integer> rotations = List.of(rand.nextInt(4), rand.nextInt(4), rand.nextInt(4), rand.nextInt(4));
@@ -69,11 +72,6 @@ public class GameBoard {
                 fields[id] = new TerrainField(bigBoard[r][c], id);
             }
         }
-    }
-
-    // Getter für das Feld-Array, etc.
-    public TerrainField[] getFields() {
-        return fields;
     }
 
     public boolean isPositionValid(GameHousePosition position) {
